@@ -13,6 +13,7 @@ import org.junit.Test;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -82,17 +83,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price", PRICE_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Price' was edited. " +
+        assertEquals(List.of("The field 'Price' was edited. " +
             "Old Value is not specified. New Value is '3000.00'"), fieldToValuesMap.getActionReasons());
         valueDto.setPrice(PRICE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price", PRICE_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Price' was edited. " +
+        assertEquals(List.of("The field 'Price' was edited. " +
             "Old Value is '3000.00'. New Value is '4000.00'"), fieldToValuesMap.getActionReasons());
         valueDto.setPrice(PRICE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price", null);
-        assertEquals(Collections.singletonList("The field 'Price' was edited. " +
+        assertEquals(List.of("The field 'Price' was edited. " +
             "Old Value is '4000.00'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -102,17 +103,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Currency", CURRENCY_OLD);
-        assertEquals(Collections.singletonList("The field 'Currency' was edited. " +
+        assertEquals(List.of("The field 'Currency' was edited. " +
             "Old Value is not specified. New Value is 'EUR'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrency(CURRENCY_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency", CURRENCY_NEW);
-        assertEquals(Collections.singletonList("The field 'Currency' was edited. " +
+        assertEquals(List.of("The field 'Currency' was edited. " +
             "Old Value is 'EUR'. New Value is 'GBP'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrency(CURRENCY_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency", null);
-        assertEquals(Collections.singletonList("The field 'Currency' was edited. " +
+        assertEquals(List.of("The field 'Currency' was edited. " +
             "Old Value is 'GBP'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -122,17 +123,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate", CURRENCY_EXCHANGE_RATE_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate' was edited. " +
             "Old Value is not specified. New Value is '1.1294040715'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrencyExchangeRate(CURRENCY_EXCHANGE_RATE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate", CURRENCY_EXCHANGE_RATE_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate' was edited. " +
             "Old Value is '1.1294040715'. New Value is '1.3285703846'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrencyExchangeRate(CURRENCY_EXCHANGE_RATE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate", null);
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate' was edited. " +
             "Old Value is '1.3285703846'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -143,18 +144,18 @@ public class UdmValueAuditFieldToValuesMapTest {
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate Date",
             formatLocalDate(CURRENCY_EXCHANGE_RATE_DATE_OLD));
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate Date' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate Date' was edited. " +
             "Old Value is not specified. New Value is '12/01/2021'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrencyExchangeRateDate(CURRENCY_EXCHANGE_RATE_DATE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate Date",
             formatLocalDate(CURRENCY_EXCHANGE_RATE_DATE_NEW));
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate Date' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate Date' was edited. " +
             "Old Value is '12/01/2021'. New Value is '12/31/2021'"), fieldToValuesMap.getActionReasons());
         valueDto.setCurrencyExchangeRateDate(CURRENCY_EXCHANGE_RATE_DATE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Currency Exchange Rate Date", null);
-        assertEquals(Collections.singletonList("The field 'Currency Exchange Rate Date' was edited. " +
+        assertEquals(List.of("The field 'Currency Exchange Rate Date' was edited. " +
             "Old Value is '12/31/2021'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -164,17 +165,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price in USD", PRICE_IN_USD_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Price in USD' was edited. " +
+        assertEquals(List.of("The field 'Price in USD' was edited. " +
             "Old Value is not specified. New Value is '3388.2122145'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceInUsd(PRICE_IN_USD_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price in USD", PRICE_IN_USD_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Price in USD' was edited. " +
+        assertEquals(List.of("The field 'Price in USD' was edited. " +
             "Old Value is '3388.2122145'. New Value is '5314.2815384'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceInUsd(PRICE_IN_USD_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price in USD", null);
-        assertEquals(Collections.singletonList("The field 'Price in USD' was edited. " +
+        assertEquals(List.of("The field 'Price in USD' was edited. " +
             "Old Value is '5314.2815384'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -184,17 +185,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Type", PRICE_TYPE_OLD);
-        assertEquals(Collections.singletonList("The field 'Price Type' was edited. " +
+        assertEquals(List.of("The field 'Price Type' was edited. " +
             "Old Value is not specified. New Value is 'Individual'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceType(PRICE_TYPE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Type", PRICE_TYPE_NEW);
-        assertEquals(Collections.singletonList("The field 'Price Type' was edited. " +
+        assertEquals(List.of("The field 'Price Type' was edited. " +
             "Old Value is 'Individual'. New Value is 'Institution'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceType(PRICE_TYPE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Type", null);
-        assertEquals(Collections.singletonList("The field 'Price Type' was edited. " +
+        assertEquals(List.of("The field 'Price Type' was edited. " +
             "Old Value is 'Institution'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -204,17 +205,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Access Type", PRICE_ACCESS_TYPE_OLD);
-        assertEquals(Collections.singletonList("The field 'Price Access Type' was edited. " +
+        assertEquals(List.of("The field 'Price Access Type' was edited. " +
             "Old Value is not specified. New Value is 'Print'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceAccessType(PRICE_ACCESS_TYPE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Access Type", PRICE_ACCESS_TYPE_NEW);
-        assertEquals(Collections.singletonList("The field 'Price Access Type' was edited. " +
+        assertEquals(List.of("The field 'Price Access Type' was edited. " +
             "Old Value is 'Print'. New Value is 'Digital'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceAccessType(PRICE_ACCESS_TYPE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Access Type", null);
-        assertEquals(Collections.singletonList("The field 'Price Access Type' was edited. " +
+        assertEquals(List.of("The field 'Price Access Type' was edited. " +
             "Old Value is 'Digital'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -224,17 +225,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Year", PRICE_YEAR_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Price Year' was edited. " +
+        assertEquals(List.of("The field 'Price Year' was edited. " +
             "Old Value is not specified. New Value is '2020'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceYear(PRICE_YEAR_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Year", PRICE_YEAR_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Price Year' was edited. " +
+        assertEquals(List.of("The field 'Price Year' was edited. " +
             "Old Value is '2020'. New Value is '2021'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceYear(PRICE_YEAR_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Year", null);
-        assertEquals(Collections.singletonList("The field 'Price Year' was edited. " +
+        assertEquals(List.of("The field 'Price Year' was edited. " +
             "Old Value is '2021'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -244,17 +245,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Source", PRICE_SOURCE_OLD);
-        assertEquals(Collections.singletonList("The field 'Price Source' was edited. Old Value is not specified. " +
+        assertEquals(List.of("The field 'Price Source' was edited. Old Value is not specified. " +
             "New Value is 'price source 1'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceSource(PRICE_SOURCE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Source", PRICE_SOURCE_NEW);
-        assertEquals(Collections.singletonList("The field 'Price Source' was edited. Old Value is 'price source 1'. " +
+        assertEquals(List.of("The field 'Price Source' was edited. Old Value is 'price source 1'. " +
             "New Value is 'price source 2'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceSource(PRICE_SOURCE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Source", null);
-        assertEquals(Collections.singletonList("The field 'Price Source' was edited. " +
+        assertEquals(List.of("The field 'Price Source' was edited. " +
             "Old Value is 'price source 2'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -264,17 +265,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Comment", PRICE_COMMENT_OLD);
-        assertEquals(Collections.singletonList("The field 'Price Comment' was edited. " +
+        assertEquals(List.of("The field 'Price Comment' was edited. " +
             "Old Value is not specified. New Value is 'price comment 1'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceComment(PRICE_COMMENT_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Comment", PRICE_COMMENT_NEW);
-        assertEquals(Collections.singletonList("The field 'Price Comment' was edited. " +
+        assertEquals(List.of("The field 'Price Comment' was edited. " +
             "Old Value is 'price comment 1'. New Value is 'price comment 2'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceComment(PRICE_COMMENT_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Comment", null);
-        assertEquals(Collections.singletonList("The field 'Price Comment' was edited. " +
+        assertEquals(List.of("The field 'Price Comment' was edited. " +
             "Old Value is 'price comment 2'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -284,17 +285,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Price Flag", fromBooleanToYNString(PRICE_FLAG_OLD));
-        assertEquals(Collections.singletonList("The field 'Price Flag' was edited. " +
+        assertEquals(List.of("The field 'Price Flag' was edited. " +
             "Old Value is not specified. New Value is 'N'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceFlag(PRICE_FLAG_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Flag", fromBooleanToYNString(PRICE_FLAG_NEW));
-        assertEquals(Collections.singletonList("The field 'Price Flag' was edited. " +
+        assertEquals(List.of("The field 'Price Flag' was edited. " +
             "Old Value is 'N'. New Value is 'Y'"), fieldToValuesMap.getActionReasons());
         valueDto.setPriceFlag(PRICE_FLAG_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Price Flag", null);
-        assertEquals(Collections.singletonList("The field 'Price Flag' was edited. " +
+        assertEquals(List.of("The field 'Price Flag' was edited. " +
             "Old Value is 'Y'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -304,17 +305,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Value Status", STATUS_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Value Status' was edited. " +
+        assertEquals(List.of("The field 'Value Status' was edited. " +
             "Old Value is not specified. New Value is 'RESEARCH_COMPLETE'"), fieldToValuesMap.getActionReasons());
         valueDto.setStatus(STATUS_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Value Status", STATUS_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Value Status' was edited. " +
+        assertEquals(List.of("The field 'Value Status' was edited. " +
             "Old Value is 'RESEARCH_COMPLETE'. New Value is 'NEW'"), fieldToValuesMap.getActionReasons());
         valueDto.setStatus(STATUS_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Value Status", null);
-        assertEquals(Collections.singletonList("The field 'Value Status' was edited. " +
+        assertEquals(List.of("The field 'Value Status' was edited. " +
             "Old Value is 'NEW'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -324,17 +325,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Pub Type", PUBLICATION_TYPE_OLD.getNameAndDescription());
-        assertEquals(Collections.singletonList("The field 'Pub Type' was edited. " +
+        assertEquals(List.of("The field 'Pub Type' was edited. " +
             "Old Value is not specified. New Value is 'BK - Book'"), fieldToValuesMap.getActionReasons());
         valueDto.setPublicationType(PUBLICATION_TYPE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Pub Type", PUBLICATION_TYPE_NEW.getNameAndDescription());
-        assertEquals(Collections.singletonList("The field 'Pub Type' was edited. " +
+        assertEquals(List.of("The field 'Pub Type' was edited. " +
             "Old Value is 'BK - Book'. New Value is 'BK2 - Book series'"), fieldToValuesMap.getActionReasons());
         valueDto.setPublicationType(PUBLICATION_TYPE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Pub Type", null);
-        assertEquals(Collections.singletonList("The field 'Pub Type' was edited. " +
+        assertEquals(List.of("The field 'Pub Type' was edited. " +
             "Old Value is 'BK2 - Book series'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -344,17 +345,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Content", CONTENT_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Content' was edited. " +
+        assertEquals(List.of("The field 'Content' was edited. " +
             "Old Value is not specified. New Value is '2.00'"), fieldToValuesMap.getActionReasons());
         valueDto.setContent(CONTENT_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content", CONTENT_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Content' was edited. " +
+        assertEquals(List.of("The field 'Content' was edited. " +
             "Old Value is '2.00'. New Value is '3.00'"), fieldToValuesMap.getActionReasons());
         valueDto.setContent(CONTENT_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content", null);
-        assertEquals(Collections.singletonList("The field 'Content' was edited. " +
+        assertEquals(List.of("The field 'Content' was edited. " +
             "Old Value is '3.00'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -364,17 +365,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Content Source", CONTENT_SOURCE_OLD);
-        assertEquals(Collections.singletonList("The field 'Content Source' was edited. " +
+        assertEquals(List.of("The field 'Content Source' was edited. " +
             "Old Value is not specified. New Value is 'content source 1'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentSource(CONTENT_SOURCE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Source", CONTENT_SOURCE_NEW);
-        assertEquals(Collections.singletonList("The field 'Content Source' was edited. " +
+        assertEquals(List.of("The field 'Content Source' was edited. " +
             "Old Value is 'content source 1'. New Value is 'content source 2'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentSource(CONTENT_SOURCE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Source", null);
-        assertEquals(Collections.singletonList("The field 'Content Source' was edited. " +
+        assertEquals(List.of("The field 'Content Source' was edited. " +
             "Old Value is 'content source 2'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -384,17 +385,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Content Comment", CONTENT_COMMENT_OLD);
-        assertEquals(Collections.singletonList("The field 'Content Comment' was edited. " +
+        assertEquals(List.of("The field 'Content Comment' was edited. " +
             "Old Value is not specified. New Value is 'content comment 1'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentComment(CONTENT_COMMENT_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Comment", CONTENT_COMMENT_NEW);
-        assertEquals(Collections.singletonList("The field 'Content Comment' was edited. " +
+        assertEquals(List.of("The field 'Content Comment' was edited. " +
             "Old Value is 'content comment 1'. New Value is 'content comment 2'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentComment(CONTENT_COMMENT_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Comment", null);
-        assertEquals(Collections.singletonList("The field 'Content Comment' was edited. " +
+        assertEquals(List.of("The field 'Content Comment' was edited. " +
             "Old Value is 'content comment 2'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -404,17 +405,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Content Flag", fromBooleanToYNString(CONTENT_FLAG_OLD));
-        assertEquals(Collections.singletonList("The field 'Content Flag' was edited. " +
+        assertEquals(List.of("The field 'Content Flag' was edited. " +
             "Old Value is not specified. New Value is 'Y'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentFlag(CONTENT_FLAG_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Flag", fromBooleanToYNString(CONTENT_FLAG_NEW));
-        assertEquals(Collections.singletonList("The field 'Content Flag' was edited. " +
+        assertEquals(List.of("The field 'Content Flag' was edited. " +
             "Old Value is 'Y'. New Value is 'N'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentFlag(CONTENT_FLAG_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Flag", null);
-        assertEquals(Collections.singletonList("The field 'Content Flag' was edited. " +
+        assertEquals(List.of("The field 'Content Flag' was edited. " +
             "Old Value is 'N'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -424,17 +425,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Content Unit Price", CONTENT_UNIT_PRICE_OLD.toString());
-        assertEquals(Collections.singletonList("The field 'Content Unit Price' was edited. " +
+        assertEquals(List.of("The field 'Content Unit Price' was edited. " +
             "Old Value is not specified. New Value is '1694.10610725'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentUnitPrice(CONTENT_UNIT_PRICE_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Unit Price", CONTENT_UNIT_PRICE_NEW.toString());
-        assertEquals(Collections.singletonList("The field 'Content Unit Price' was edited. " +
+        assertEquals(List.of("The field 'Content Unit Price' was edited. " +
             "Old Value is '1694.10610725'. New Value is '1771.4271794667'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentUnitPrice(CONTENT_UNIT_PRICE_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Content Unit Price", null);
-        assertEquals(Collections.singletonList("The field 'Content Unit Price' was edited. " +
+        assertEquals(List.of("The field 'Content Unit Price' was edited. " +
             "Old Value is '1771.4271794667'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -444,17 +445,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("CUP Flag", fromBooleanToYNString(CUP_FLAG_OLD));
-        assertEquals(Collections.singletonList("The field 'CUP Flag' was edited. " +
+        assertEquals(List.of("The field 'CUP Flag' was edited. " +
             "Old Value is not specified. New Value is 'N'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentUnitPriceFlag(CUP_FLAG_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("CUP Flag", fromBooleanToYNString(CUP_FLAG_NEW));
-        assertEquals(Collections.singletonList("The field 'CUP Flag' was edited. " +
+        assertEquals(List.of("The field 'CUP Flag' was edited. " +
             "Old Value is 'N'. New Value is 'Y'"), fieldToValuesMap.getActionReasons());
         valueDto.setContentUnitPriceFlag(CUP_FLAG_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("CUP Flag", null);
-        assertEquals(Collections.singletonList("The field 'CUP Flag' was edited. " +
+        assertEquals(List.of("The field 'CUP Flag' was edited. " +
             "Old Value is 'Y'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
@@ -464,17 +465,17 @@ public class UdmValueAuditFieldToValuesMapTest {
         UdmValueAuditFieldToValuesMap fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         assertEquals(Collections.emptyList(), fieldToValuesMap.getActionReasons());
         fieldToValuesMap.updateFieldValue("Comment", COMMENT_OLD);
-        assertEquals(Collections.singletonList("The field 'Comment' was edited. " +
+        assertEquals(List.of("The field 'Comment' was edited. " +
             "Old Value is not specified. New Value is 'comment 1'"), fieldToValuesMap.getActionReasons());
         valueDto.setComment(COMMENT_OLD);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Comment", COMMENT_NEW);
-        assertEquals(Collections.singletonList("The field 'Comment' was edited. " +
+        assertEquals(List.of("The field 'Comment' was edited. " +
             "Old Value is 'comment 1'. New Value is 'comment 2'"), fieldToValuesMap.getActionReasons());
         valueDto.setComment(COMMENT_NEW);
         fieldToValuesMap = new UdmValueAuditFieldToValuesMap(valueDto);
         fieldToValuesMap.updateFieldValue("Comment", null);
-        assertEquals(Collections.singletonList("The field 'Comment' was edited. " +
+        assertEquals(List.of("The field 'Comment' was edited. " +
             "Old Value is 'comment 2'. New Value is not specified"), fieldToValuesMap.getActionReasons());
     }
 
