@@ -88,7 +88,7 @@ public class ScenarioFilterWidgetTest {
         expectLastCall().once();
         replay(filterWindow, Windows.class);
         scenarioFilterWidget.showFilterWindow();
-        assertEquals(Collections.singletonList(SCENARIO_NAME), providerCapture.getValue().apply(buildScenario()));
+        assertEquals(List.of(SCENARIO_NAME), providerCapture.getValue().apply(buildScenario()));
         verify(filterWindow, Windows.class);
     }
 
