@@ -72,7 +72,7 @@ public class UdmUsableDetailsByCountryReportControllerTest {
 
     @Test
     public void testGetAllPeriods() {
-        List<Integer> periods = Collections.singletonList(202112);
+        List<Integer> periods = List.of(202112);
         expect(udmUsageService.getPeriods()).andReturn(periods).once();
         replay(udmUsageService);
         assertEquals(periods, controller.getAllPeriods());
